<resources>
    <string name="app_name">Corona-request-maker</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_login">Have An Account? Login</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have An Account? Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="task">Task</string>
    <string name="submit">Submit</string>
    <string name="place_request">Place Request</string>
    <string name="view_requests">View Requests</string>
    <string name="accept_task">Accept Task</string>
</resources>